Исправлена разметка, соответствует валидаторам

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
 
 <body class="page-body">
   <header class="main-header">
-    <div class="main-logo__body">
+    <div class="main-logo">
       <a class="main-logo__icon" href="#">
         <img class="main-logo__icon-image" src="#" alt="Логотип компании Кэт энерджи.">
       </a>
@@ -307,7 +307,7 @@
               <p class="add-goods__text">1 упаковка (100 г)</p>
               <p class="add-goods__text">200 Р.</p>
             </div>
-            <a class="card-cart__link button" href="#">
+            <a class="add-goods__link button" href="#">
               <span class="button__text">Заказать</span></a>
           </div>
         </li>
@@ -318,7 +318,7 @@
               <p class="add-goods__text">5 литров</p>
               <p class="add-goods__text">50 Р.</p>
             </div>
-            <a class="card-cart__link button" href="#">
+            <a class="add-goods__link button" href="#">
               <span class="button__text">Заказать</span></a>
           </div>
         </li>
@@ -329,7 +329,7 @@
               <p class="add-goods__text">1 литр</p>
               <p class="add-goods__text">100 Р.</p>
             </div>
-            <a class="card-cart__link button" href="#">
+            <a class="add-goods__link button" href="#">
               <span class="button__text">Заказать</span></a>
           </div>
         </li>
@@ -340,7 +340,7 @@
               <p class="add-goods__text">1 упаковка (30 г)</p>
               <p class="add-goods__text">300 Р.</p>
             </div>
-            <a class="card-cart__link button" href="#">
+            <a class="add-goods__link button" href="#">
               <span class="button__text">Заказать</span></a>
           </div>
         </li>
@@ -374,8 +374,8 @@
     </section>
     <div class="main-footer__wrapper">
       <div class="main-footer__logo">
-        <a class="main-logo__title" href="#">
-          <img class="main-logo__title-image" src="#" alt="Надпись Cat energy">
+        <a class="main-footer__logo" href="#">
+          <img class="main-footer__icon" src="#" alt="Надпись Cat energy">
         </a>
       </div>
       <div class="main-footer__social social">
