--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
 
 <body class="page-body">
   <header class="main-header">
-    <div class="main-logo__body">
+    <div class="main-logo">
       <a class="main-logo__icon" href="#">
         <img class="main-logo__icon-image" src="#" alt="Логотип компании Кэт энерджи.">
       </a>
@@ -33,8 +33,9 @@
 
 
   <main class="form container">
-    <h1 class="form__title"></h1>
-    <p class="form__text"></p>
+    <h1 class="form__title">Подбор программы</h1>
+    <p class="form__text">Заполните анкету, и мы подберем
+      программу питания для вашего кота</p>
 
     <form class="form__form" action="https://echo.htmlacademy.ru/" method="post">
       <fieldset class="form__form-field form-field">
@@ -176,8 +177,8 @@
     </section>
     <div class="main-footer__wrapper">
       <div class="main-footer__logo">
-        <a class="main-logo__title" href="#">
-          <img class="main-logo__title-image" src="#" alt="Надпись Cat energy">
+        <a class="main-footer__logo" href="#">
+          <img class="main-footer__icon" src="#" alt="Надпись Cat energy">
         </a>
       </div>
       <div class="main-footer__social social">
