--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 
 <body class="page-body">
   <header class="main-header">
-    <div class="main-logo__body">
+    <div class="main-logo">
       <a class="main-logo__icon" href="#">
         <img class="main-logo__icon-image" src="#" alt="Логотип компании Кэт энерджи.">
       </a>
@@ -83,14 +83,14 @@
       <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
         Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
         в день. </p>
-      <dl class="example__stats stats__list">
-        <div class="stats__item">
-          <dt class="stats__number">5 кг</dt>
-          <dd class="stats__description">Снижение веса</dd>
+      <dl class="example__stats stats-list">
+        <div class="stats-list__item">
+          <dt class="stats-list__number">5 кг</dt>
+          <dd class="stats-list__description">Снижение веса</dd>
         </div>
-        <div class="stats__item">
-          <dt class="stats__number">60 дней</dt>
-          <dd class="stats__description">Затрачено времени</dd>
+        <div class="stats-list__item">
+          <dt class="stats-list__number">60 дней</dt>
+          <dd class="stats-list__description">Затрачено времени</dd>
         </div>
       </dl>
       <p class="example__text-cost">Затраты на питание: 15 000 РУБ. </p>
@@ -134,8 +134,8 @@
     </section>
     <div class="main-footer__wrapper">
       <div class="main-footer__logo">
-        <a class="main-logo__title" href="#">
-          <img class="main-logo__title-image" src="#" alt="Надпись Cat energy">
+        <a class="main-footer__logo" href="#">
+          <img class="main-footer__icon" src="#" alt="Надпись Cat energy">
         </a>
       </div>
       <div class="main-footer__social social">
