--- a/source/index.html
+++ b/source/index.html
@@ -4,16 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body class="page-body">
-  <header class="main-header">
+  <header class="main-header page-body__header-wrapper container">
     <div class="main-logo">
       <a class="main-logo__icon" href="#">
-        <img class="main-logo__icon-image" src="#" alt="Логотип компании Кэт энерджи.">
+        <img class="main-logo__icon-image" src="img/header/logo.svg" alt="Логотип компании Кэт энерджи." width="34"
+          height="38">
       </a>
       <a class="main-logo__title" href="#">
-        <img class="main-logo__title-image" src="#" alt="Надпись Cat energy">
+        <img class="main-logo__title-image" src="img/header/logo-text.svg" alt="Надпись Cat energy." width="101"
+          height="18">
       </a>
     </div>
     <nav class="main-navigation">
@@ -23,39 +26,42 @@
       <ul class="main-navigation__list">
         <li class="main-navigation__item main-navigation__item--active"><a class="main-navigation__link">Главная</a>
         </li>
-        <li class="main-navigation__item"><a class="main-navigation__link" href="#">Каталог продукции</a></li>
+        <li class="main-navigation__item"><a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+        </li>
         <li class="main-navigation__item"><a class="main-navigation__link" href="form.html">Подбор программы</a></li>
       </ul>
     </div>
   </header>
   <main class="main container">
-    <section class="main-poster container">
+    <section class="main-poster main__wrapper">
       <h1 class="main-poster__title">Функциональное
         питание для котов</h1>
       <p class="main-poster__text">Занялся собой? Займись котом!</p>
-      <a href="#" class="main-poster__link button">
+      <div class="main-poster__image-wrapper image-wrapper"><img class="main-poster__image"
+          src="img/poster/mobile-jar.png" alt="Банка с кормом." width="280" height="270"></div>
+      <a href="#" class="main-poster__link button container-content">
         <span class="main-poster__text button__text"> Подобрать программу</span>
       </a>
     </section>
 
-    <section class="our-programs container">
+    <section class="our-programs container-content">
       <h2 class="visually-hidden">Программы для изменения веса</h2>
       <div class="our-programs__wrapper slim-program">
-        <h3 class="slim-program__title">Похудение</h3>
-        <p class="slim-program__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора
+        <h3 class="our-programs__title">Похудение</h3>
+        <p class="our-programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора
           на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a class="slim-program__link" href="#">Каталог Slim</a>
+        <a class="our-programs__link" href="catalog.html">Каталог Slim</a>
       </div>
       <div class="our-programs__wrapper pro-program">
-        <h3 class="pro-program__title">Набор массы</h3>
-        <p class="pro-program__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+        <h3 class="our-programs__title">Набор массы</h3>
+        <p class="our-programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
           поможет вашему коту нарастить необходимые мышцы!</p>
-        <a class="pro-program__link" href="#">Каталог Pro</a>
+        <a class="our-programs__link" href="catalog.html">Каталог Pro</a>
       </div>
     </section>
 
-    <section class="features container">
-      <h2 class="features__title">Наши особенности</h2>
+    <section class="features container-content">
+      <h2 class="features__title">Как это работает</h2>
       <ul class="features__list">
         <li class="features__item">
           <p class="features__text">Функциональное питание
@@ -78,27 +84,31 @@
       </ul>
     </section>
 
-    <section class="example container">
-      <h2 class="example__title">Живой пример</h2>
-      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-        Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
-        в день. </p>
-      <dl class="example__stats stats-list">
-        <div class="stats-list__item">
-          <dt class="stats-list__number">5 кг</dt>
-          <dd class="stats-list__description">Снижение веса</dd>
-        </div>
-        <div class="stats-list__item">
-          <dt class="stats-list__number">60 дней</dt>
-          <dd class="stats-list__description">Затрачено времени</dd>
-        </div>
-      </dl>
-      <p class="example__text-cost">Затраты на питание: 15 000 РУБ. </p>
-
-      <div class="example__slider">
-        <div class="example__cats-image example__cats-image--fat">
-          <div class="example__cats-image example__cats-image--slim">
+    <div class="container container--example">
+      <section class="example container-content">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+          Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
+          часов
+          в день. </p>
+        <dl class="example__stats stats-list">
+          <div class="stats-list__item">
+            <dt class="stats-list__number">5 кг</dt>
+            <dd class="stats-list__description">Снижение веса</dd>
           </div>
+          <div class="stats-list__item">
+            <dt class="stats-list__number">60 дней</dt>
+            <dd class="stats-list__description">Затрачено времени</dd>
+          </div>
+        </dl>
+        <p class="example__text-cost">Затраты на питание: 15 000 РУБ. </p>
+
+        <div class="example__slider">
+          <div class="example__cats-image example__cats-image--fat">
+            <img class="example__cats-fat" src="/source/img/example/before-cat.png" alt="Изображение кота до похудения."
+              width="280" height="232">
+          </div>
+          <div class="example__cats-image example__cats-image--slim"></div>
         </div>
         <div class="example__range">
           <div class="example__range-scale">
@@ -111,17 +121,19 @@
             </div>
           </div>
         </div>
-      </div>
+    </div>
     </section>
+    </div>
+
 
   </main>
-  <footer class="main-footer">
-    <section class="collaboration container">
+  <footer class="main-footer ">
+    <section class="collaboration container-content">
       <h2 class="collaboration__title">Приглашаем
         к сотрудничеству
         дилеров!
       </h2>
-      <address class="collaboration__address">
+      <address class="collaboration__address container">
         <p class="collaboration__address-street">ул. Большая
           Конюшенная, д. 19/8</p>
         <p class="collaboration__address-city">Санкт-Петербург</p>
@@ -129,18 +141,19 @@
     </section>
     <section class="map container">
       <h2 class="visually-hidden">Где мы находимся</h2>
-      <img class="map__image" src="#" alt="ул. Большая
-      Конюшенная, д. 19/8, Санкт-Петербург">
+      <img class="map__image" src="img/map.jpeg" alt="ул. Большая
+      Конюшенная, д. 19/8, Санкт-Петербург" width="320" height="362">
     </section>
-    <div class="main-footer__wrapper">
-      <div class="main-footer__logo">
-        <a class="main-footer__logo" href="#">
-          <img class="main-footer__icon" src="#" alt="Надпись Cat energy">
+    <div class="main-footer__wrapper container">
+      <div class="main-footer__logo container-content">
+        <a class="main-footer__link" href="#">
+          <img class="main-footer__icon" src="img/header/logo-text.svg" alt="Надпись Cat energy" width="128"
+            height="24">
         </a>
       </div>
-      <div class="main-footer__social social">
-        <b class="social__title">Давайте дружить!</b>
-        <ul class="social__list">
+      <div class="main-footer__social social container-content">
+        <b class="visually-hidden">Давайте дружить!</b>
+        <ul class="social__list ">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Мы в Вконтакте</span>
@@ -157,7 +170,7 @@
           </li>
         </ul>
       </div>
-      <div class="main-footer__copyright copyright">
+      <div class="main-footer__copyright copyright container-content">
         <b class="copyright__text">HTML Academy</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML
             Academy</span></a>
