--- a/source/index.html
+++ b/source/index.html
@@ -105,7 +105,7 @@
 
         <div class="example__slider">
           <div class="example__cats-image example__cats-image--fat">
-            <img class="example__cats-fat" src="/source/img/example/before-cat.png" alt="Изображение кота до похудения."
+            <img class="example__cats-fat" src="img/example/before-cat.png" alt="Изображение кота до похудения."
               width="280" height="232">
           </div>
           <div class="example__cats-image example__cats-image--slim"></div>
