--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,12 +24,13 @@
       <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     </nav>
     <div class="main-navigation ">
-      <ul class="main-navigation__list">
-        <li class="main-navigation__item main-navigation__item--active"><a class="main-navigation__link"
+      <ul class="main-navigation__list reset-list">
+        <li class="main-navigation__item main-navigation__item--active reset-item"><a class="main-navigation__link"
             href="index.html">Главная</a>
         </li>
-        <li class="main-navigation__item"><a class="main-navigation__link">Каталог продукции</a></li>
-        <li class="main-navigation__item"><a class="main-navigation__link" href="form.html">Подбор программы</a></li>
+        <li class="main-navigation__item reset-item"><a class="main-navigation__link">Каталог продукции</a></li>
+        <li class="main-navigation__item reset-item"><a class="main-navigation__link" href="form.html">Подбор
+            программы</a></li>
       </ul>
     </div>
   </header>
@@ -37,8 +38,8 @@
   <main class="catalog container-content">
     <h1 class="catalog__title">Каталог продукции</h1>
     <div class="catalog__list-wrapper">
-      <ul class="catalog__list">
-        <li class="catalog__item card-cart">
+      <ul class="catalog__list reset-list">
+        <li class="catalog__item card-cart reset-item">
           <img class="card-cart__image" src="img/catalog/energy-slim-chic-small.png"
             alt="Продукт со вкусом курица маленький" height="140" width="112">
           <h2 class="card-cart__title">Cat Energy
@@ -74,7 +75,7 @@
           <a class="card-cart__link button" href="#">
             <span class="button__text">Заказать</span></a>
         </li>
-        <li class="catalog__item card-cart">
+        <li class="catalog__item card-cart reset-item">
           <img class="card-cart__image" src="img/catalog/energy-slim-chic-big.png"
             alt="Продукт со вкусом курица большой" height="140" width="112">
           <h2 class="card-cart__title">Cat Energy
@@ -110,7 +111,7 @@
           <a class="card-cart__link button" href="#">
             <span class="button__text">Заказать</span></a>
         </li>
-        <li class="catalog__item card-cart">
+        <li class="catalog__item card-cart reset-item">
           <img class="card-cart__image" src="img/catalog/energy-slim-fish-small.png"
             alt="Продукт со вкусом рыба маленький" height="140" width="112">
           <h2 class="card-cart__title">Cat Energy
@@ -146,7 +147,7 @@
           <a class="card-cart__link button" href="#">
             <span class="button__text">Заказать</span></a>
         </li>
-        <li class="catalog__item card-cart">
+        <li class="catalog__item card-cart reset-item">
           <img class="card-cart__image" src="img/catalog/energy-slim-fish-big.png" alt="Продукт со вкусом рыба большой"
             height="140" width="112">
           <h2 class="card-cart__title">Cat Energy
@@ -182,7 +183,7 @@
           <a class="card-cart__link button" href="#">
             <span class="button__text">Заказать</span></a>
         </li>
-        <li class="catalog__item card-cart">
+        <li class="catalog__item card-cart reset-item">
           <img class="card-cart__image" src="img/catalog/energy-slim-buck-small.png"
             alt="Продукт со вкусом гречка маленький" height="140" width="112">
           <h2 class="card-cart__title">Cat Energy
@@ -218,7 +219,7 @@
           <a class="card-cart__link button" href="#">
             <span class="button__text">Заказать</span></a>
         </li>
-        <li class="catalog__item card-cart">
+        <li class="catalog__item card-cart reset-item">
           <img class="card-cart__image" src="img/catalog/energy-slim-buck-big.png"
             alt="Продукт со вкусом гречка большой" height="140" width="112">
           <h2 class="card-cart__title">Cat Energy
@@ -254,7 +255,7 @@
           <a class="card-cart__link button" href="#">
             <span class="button__text">Заказать</span></a>
         </li>
-        <li class="catalog__item card-cart">
+        <li class="catalog__item card-cart reset-item">
           <img class="card-cart__image" src="img/catalog/energy-slim-rice.png" alt="Продукт со вкусом рис" height="140"
             width="112">
           <h2 class="card-cart__title">Cat Energy
@@ -290,7 +291,7 @@
           <a class="card-cart__link button" href="#">
             <span class="button__text">Заказать</span></a>
         </li>
-        <li class="catalog__item card-cart card-cart--loadmore">
+        <li class="catalog__item card-cart card-cart--loadmore reset-item">
           <img class="card-cart__image" src="img/catalog/load-more.svg" alt="Еще больше товаров." height="30"
             width="30">
           <h2 class="card-cart__title card-cart__title--loadmore">Показать еще 100500 товаров</h2>
@@ -305,8 +306,8 @@
     <section class="add-goods container-content">
       <h2 class="add-goods__title">Дополнительные товары</h2>
       <div class="add-goods__wrapper">
-        <ul class="add-goods__list">
-          <li class="add-goods__item">
+        <ul class="add-goods__list reset-list">
+          <li class="add-goods__item reset-item">
             <div class="add-goods__inner-wrapper">
               <div class="add-goods__title-text-wrapper">
                 <h3 class="add-goods__inner-title">Сахарозаменитель</h3>
@@ -320,7 +321,7 @@
                 <span class="button__text">Заказать</span></a>
             </div>
           </li>
-          <li class="add-goods__item">
+          <li class="add-goods__item reset-item">
             <div class="add-goods__inner-wrapper">
 
               <div class="add-goods__title-text-wrapper">
@@ -334,7 +335,7 @@
                 <span class="button__text">Заказать</span></a>
             </div>
           </li>
-          <li class="add-goods__item">
+          <li class="add-goods__item reset-item">
             <div class="add-goods__inner-wrapper">
 
               <div class="add-goods__title-text-wrapper">
@@ -348,7 +349,7 @@
                 <span class="button__text">Заказать</span></a>
             </div>
           </li>
-          <li class="add-goods__item">
+          <li class="add-goods__item reset-item">
             <div class="add-goods__inner-wrapper">
 
               <div class="add-goods__title-text-wrapper">
@@ -405,8 +406,8 @@
         </div>
         <div class="main-footer__social social">
           <b class="visually-hidden">Давайте дружить!</b>
-          <ul class="social__list ">
-            <li class="social__item">
+          <ul class="social__list reset-list">
+            <li class="social__item reset-item">
               <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
                 <svg class="footer_icon" aria-hidden="true" focusable="false" role="img" aria-label="Вконтакте."
                   width="27" height="17" viewBox="0 0 27 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -417,7 +418,7 @@
                 <span class="visually-hidden">Мы в Вконтакте</span>
               </a>
             </li>
-            <li class="social__item">
+            <li class="social__item reset-item">
               <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"><span
                   class="visually-hidden">Мы в
                   Ютубе</span>
@@ -429,7 +430,7 @@
                       fill="#666" />
                 </svg></a>
             </li>
-            <li class="social__item">
+            <li class="social__item reset-item">
               <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
                 <svg class="footer_icon" aria-hidden="true" focusable="false" role="img" aria-label="Телеграм."
                   width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
