--- a/source/form.html
+++ b/source/form.html
@@ -24,12 +24,14 @@
       <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     </nav>
     <div class="main-navigation">
-      <ul class="main-navigation__list">
-        <li class="main-navigation__item"><a class="main-navigation__link" href="index.html">Главная</a>
+      <ul class="main-navigation__list reset-list">
+        <li class="main-navigation__item reset-item"><a class="main-navigation__link" href="index.html">Главная</a>
         </li>
-        <li class="main-navigation__item"><a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+        <li class="main-navigation__item reset-item"><a class="main-navigation__link" href="catalog.html">Каталог
+            продукции</a>
         </li>
-        <li class="main-navigation__item main-navigation__item--active"><a class="main-navigation__link">Подбор
+        <li class="main-navigation__item main-navigation__item--active reset-item"><a
+            class="main-navigation__link">Подбор
             программы</a></li>
       </ul>
     </div>
@@ -70,22 +72,22 @@
 
         <fieldset class="form__check  radio-button form__form-field ">
           <legend class="visually-hidden">Выбор программы</legend>
-          <ul class="radio-button__list">
-            <li class="radio-button__item">
+          <ul class="radio-button__list reset-list">
+            <li class="radio-button__item reset-item">
               <label class="radio-button__control">
                 <input class="radio-button__control-input visually-hidden" type="radio" name="program-group"
                   value="true" checked /><span class="radio-button__control-mark"></span>
                 <span class="radio-button__control-program">Похудение</span>
               </label>
             </li>
-            <li class="radio-button__item">
+            <li class="radio-button__item reset-item">
               <label class="radio-button__control">
                 <input class="radio-button__control-input visually-hidden" type="radio" name="program-group"
                   value="true" /><span class="radio-button__control-mark"></span>
                 <span class="radio-button__control-program">Набор массы</span>
               </label>
             </li>
-            <li class="radio-button__item">
+            <li class="radio-button__item reset-item">
               <label class="radio-button__control">
                 <input class="radio-button__control-input visually-hidden" type="radio" name="program-group"
                   value="true" /><span class="radio-button__control-mark"></span>
@@ -125,29 +127,29 @@
 
       <fieldset class="form__check  checkbox form__form-field ">
         <legend class="checkbox__title">Дополнительно</legend>
-        <ul class="checkbox__list">
-          <li class="checkbox__item">
+        <ul class="checkbox__list reset-list">
+          <li class="checkbox__item reset-item">
             <label class="checkbox__control">
               <input class="checkbox__control-input visually-hidden" type="checkbox" name="sweetener" checked />
               <span class="checkbox__control-mark"></span>
               <span class="checkbox__control-add">Сахарозаменитель</span>
             </label>
           </li>
-          <li class="checkbox__item">
+          <li class="checkbox__item reset-item">
             <label class="checkbox__control">
               <input class="checkbox__control-input visually-hidden" type="checkbox" name="water" />
               <span class="checkbox__control-mark"></span>
               <span class="checkbox__control-add">Питьевая вода</span>
             </label>
           </li>
-          <li class="checkbox__item">
+          <li class="checkbox__item reset-item">
             <label class="checkbox__control">
               <input class="checkbox__control-input visually-hidden" type="checkbox" name="milk" />
               <span class="checkbox__control-mark"></span>
               <span class="checkbox__control-add">Молоко</span>
             </label>
           </li>
-          <li class="checkbox__item">
+          <li class="checkbox__item reset-item">
             <label class="checkbox__control">
               <input class="checkbox__control-input visually-hidden" type="checkbox" name="vitamins" />
               <span class="checkbox__control-mark"></span>
@@ -196,8 +198,8 @@
         </div>
         <div class="main-footer__social social">
           <b class="visually-hidden">Давайте дружить!</b>
-          <ul class="social__list ">
-            <li class="social__item">
+          <ul class="social__list reset-list">
+            <li class="social__item reset-item">
               <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
                 <svg class="footer_icon" aria-hidden="true" focusable="false" role="img" aria-label="Вконтакте."
                   width="27" height="17" viewBox="0 0 27 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -208,7 +210,7 @@
                 <span class="visually-hidden">Мы в Вконтакте</span>
               </a>
             </li>
-            <li class="social__item">
+            <li class="social__item reset-item">
               <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"><span
                   class="visually-hidden">Мы в
                   Ютубе</span>
@@ -220,7 +222,7 @@
                       fill="#666" />
                 </svg></a>
             </li>
-            <li class="social__item">
+            <li class="social__item reset-item">
               <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
                 <svg class="footer_icon" aria-hidden="true" focusable="false" role="img" aria-label="Телеграм."
                   width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
