--- a/source/index.html
+++ b/source/index.html
@@ -22,12 +22,15 @@
     </div>
     <nav class="main-navigation">
       <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <ul class="main-navigation__list">
-        <li class="main-navigation__item main-navigation__item--active"><a class="main-navigation__link">Главная</a>
+      <ul class="main-navigation__list reset-list">
+        <li class="main-navigation__item main-navigation__item--active reset-item"><a
+            class="main-navigation__link">Главная</a>
         </li>
-        <li class="main-navigation__item"><a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+        <li class="main-navigation__item reset-item"><a class="main-navigation__link" href="catalog.html">Каталог
+            продукции</a>
         </li>
-        <li class="main-navigation__item"><a class="main-navigation__link" href="form.html">Подбор программы</a></li>
+        <li class="main-navigation__item reset-item"><a class="main-navigation__link" href="form.html">Подбор
+            программы</a></li>
       </ul>
     </nav>
 
@@ -63,23 +66,23 @@
 
     <section class="features container-content">
       <h2 class="features__title">Как это работает</h2>
-      <ul class="features__list">
-        <li class="features__item">
+      <ul class="features__list reset-list">
+        <li class="features__item reset-item">
           <p class="features__text features__text-leaf">Функциональное питание
             содержит только полезные
             питательные вещества.</p>
         </li>
-        <li class="features__item">
+        <li class="features__item reset-item">
           <p class="features__text features__text-boil">Выпускается в виде порошка,
             который нужно лишь залить
             кипятком и готово.</p>
         </li>
-        <li class="features__item">
+        <li class="features__item reset-item">
           <p class="features__text features__text-cutlery">Замените один-два приема
             обычной еды на наше
             функциональное питание.</p>
         </li>
-        <li class="features__item">
+        <li class="features__item reset-item">
           <p class="features__text features__text-alarm">Уже через месяц наслаждайтесь изменениями к лучшему вашего
             питомца!</p>
         </li>
@@ -166,8 +169,8 @@
         </div>
         <div class="main-footer__social social">
           <b class="visually-hidden">Давайте дружить!</b>
-          <ul class="social__list ">
-            <li class="social__item">
+          <ul class="social__list reset-list">
+            <li class="social__item reset-item">
               <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
                 <svg class="footer_icon" aria-hidden="true" focusable="false" role="img" aria-label="Вконтакте."
                   width="27" height="17" viewBox="0 0 27 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -178,7 +181,7 @@
                 <span class="visually-hidden">Мы в Вконтакте</span>
               </a>
             </li>
-            <li class="social__item">
+            <li class="social__item reset-item">
               <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"><span
                   class="visually-hidden">Мы в
                   Ютубе</span>
@@ -190,7 +193,7 @@
                       fill="#666" />
                 </svg></a>
             </li>
-            <li class="social__item">
+            <li class="social__item reset-item">
               <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
                 <svg class="footer_icon" aria-hidden="true" focusable="false" role="img" aria-label="Телеграм."
                   width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
